# dasr

./: .gitignore  benchmark_models.ipynb  explainability.ipynb  finetune_wav2vec.ipynb  old_train.py  pyproject.toml  test_whisper.ipynb  train.ipynb  train.py  train_finetune_w2v.py  trash.ipynb  visualization.ipynb  wav2vec.ipynb  wav2vec_denoiser.ipynb
configs/: config.yaml  config_w2v_finetune.yaml
configs/data/: truncated_randn_noise.yaml
configs/denoiser/: demucs.yaml  pretrained_facebook.yaml  simple_denoiser.yaml  simple_denoiser_lstm.yaml
dasr/asr/: __init__.py  base.py  wav2vec.py  whisper.py  whisper_utils.py
dasr/datasets/: __init__.py  common_voice.py  make_dataloaders.py  random_noise.py
dasr/logger/: wandb_logger.py
dasr/losses/: __init__.py  loss_factory.py  sfft_loss.py
dasr/metrics/: __init__.py  pl_custom.py  wer_cer.py
dasr/models/: __init__.py  demucs.py  facebook_denoiser.py  naive_model.py  naive_model_lstm.py
dasr/notebooks/: benchmark_spellchecking_results.ipynb  cross_dataset_zero_shot.ipynb  cross_model_zero_shot.ipynb  spellchecker_inference.ipynb  transctibe_commonvoice.ipynb
dasr/train/: pl_data.py  pl_model.py  pl_tune_w2v.py  trainer.py  utils.py
docker/: Dockerfile.x86_64  build.sh  into.sh  requirements.txt  start.sh  stop.sh
