[project]
name = "dasr"
version = "0.1.0"
description = "Denoising ASR Framework"
authors = [
    {name = "Petryashin Ilia", email = "petryashin.i.e@mail.ru"}
]
readme = "README.md"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dasr"]

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 80